--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,8 @@
     "babel-brunch": "6.1.1",
     "brunch": "2.10.9",
     "clean-css-brunch": "2.10.0",
+    "eslint": "^4.9.0",
+    "eslint-plugin-react": "^7.4.0",
     "uglify-js-brunch": "2.10.0"
   }
 }
