Run "yarn add --dev sass-brunch" in assets folder

--- a/assets/package.json
+++ b/assets/package.json
@@ -17,6 +17,7 @@
     "clean-css-brunch": "2.10.0",
     "eslint": "^4.9.0",
     "eslint-plugin-react": "^7.4.0",
+    "sass-brunch": "^2.10.4",
     "uglify-js-brunch": "2.10.0"
   }
 }
