--- a/assets/package.json
+++ b/assets/package.json
@@ -18,6 +18,7 @@
     "eslint": "^4.9.0",
     "eslint-plugin-react": "^7.4.0",
     "sass-brunch": "^2.10.4",
+    "semantic-ui-sass": "^2.2.11",
     "uglify-js-brunch": "2.10.0"
   }
 }
