--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: circleci/elixir:1.5.1
       - image: circleci/postgres:9.5-alpine
-        env:
+        environment:
           - POSTGRES_USER=root
     working_directory: ~/drab_spike
     steps:
