--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: circleci/elixir:1.5.1
       - image: circleci/postgres:9.5-alpine
         environment:
-          - POSTGRES_USER=root
+          - POSTGRES_USER=postgres
     working_directory: ~/drab_spike
     steps:
       - checkout
